--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -35,13 +35,6 @@ main {
     
 }
 
-.active {
-    transform: scale(0.95);
-    background: $dark-green;
-}
-
-
-
 .categories {
     display: flex;
     justify-content: space-between;
@@ -57,7 +50,7 @@ main {
 .next-btn {
     @include button;
     color: #fff;
-    display: block;
+    display: none;
     background-color: $dark-green;
     color: #f2f2f2;
     width: 45%;
@@ -67,7 +60,7 @@ main {
 }
 
 .quote-wrapper {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
@@ -94,7 +87,11 @@ main {
     }
 }
 
-
+.active {
+    @include button;
+    transform: scale(0.90);
+    background-color: $dark-green;
+}
 
 
 
